# strategy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: librarian.md
docs/strategy/: 2025-01-05-adjacent-markets-due-diligence.md  2025-08-04-next-chapter-ai-dd-agents.md  2025-08-04-refined-ai-business-analyst-strategy.md  2025-08-05-verification-capabilities-market-matrix.md  notion-integration-guide.md
knowledge-base/: index.yaml
knowledge-base/context/current-state/: enterprise-customers-2025.yaml  financial-position-july-2025.yaml  q3-2025-strategy-execution.yaml
knowledge-base/context/future-plans/: agent-hub-plg-strategy.yaml  product-roadmap-2025.yaml
knowledge-base/entities/concepts/: parcha-core-business.yaml
knowledge-base/insights/operational/: gtm-lessons-q2-2025.yaml  technical-challenges-learnings.yaml
knowledge-base/insights/strategic/: agent-anthropomorphization-analysis.yaml  board-q3-2025-strategic-pivot.yaml  competitive-landscape-2025.yaml  july-31-board-feedback-plg-pivot.yaml  sales-funnel-breakdown-analysis.yaml
knowledge-base/sources/pdfs/: pdf-monthly-investor-updates-20250803.yaml  pdf-monthly-investor-updates-20250803_content.md  pdf-parcha-board-meeting-july-2025-20250803.yaml  pdf-parcha-board-meeting-july-2025-20250803_content.md  pdf-parcha-board-memos-20250803.yaml
src/: notion_sync.py  pdf_processor.py
templates/: adr-template.md  roadmap-template.md  strategy-document-template.md
